--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "moment": "^2.25.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
-    "wikibase-sdk": "^7.4.1"
+    "request": "^2.88.2",
+    "wikibase-sdk": "^7.4.1",
+    "wikidata-sdk": "^7.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
