--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "stop": "pkill --signal SIGINT wikidata-tree",
     "dev": "nodemon ./bin/www"
   },
+  "main": "app.js",
   "dependencies": {
     "async": "^3.2.0",
     "cookie-parser": "~1.4.4",
