--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "app.js",
   "dependencies": {
     "async": "^3.2.0",
+    "axios": "^0.19.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
