--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "memory-cache": "^0.2.0",
     "moment": "^2.25.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
